--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>AngularApp</title>
+    <title>Intégration - AJAX</title>
 </head>
 <body>
-
+    <h1>Test</h1>
 <script src="./script.js"></script>
 </body>
 </html>
