--- a/index.html
+++ b/index.html
@@ -3,11 +3,120 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Intégration - AJAX</title>
 </head>
 <body>
-    <h1>Test</h1>
-<script src="./script.js"></script>
+    <header>
+        <div class="logo">
+            <img src="./logotype.png" alt="logo">
+        </div>
+
+        <nav>
+            <ul class="menu">
+                <li class="menu-item active">
+                    <a  href="./index.html">Accueil</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">Prochaine mission</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <aside class="aside">
+            <nav>
+                <ul class="aside-list">
+                    <li class="aside-item">
+                        <i class="fas fa-solid fa-globe"></i>
+                        <a href="#">Planètes</a>
+                    </li>
+                    <li class="aside-item">
+                        <i class="fas fa-solid fa-rocket"></i>
+                        <a href="#">Véhicules</a>
+                    </li>
+                    <li class="aside-item">
+                        <i class="fa fa-brands fa-reddit-alien"></i>
+                        <a href="#">Personnes</a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+
+        <div class="container">
+            <div class="about">
+                <h2>About the universe</h2>
+                <p class="text">Bienvenue sur <span>about the universe</span> pour découvrir toutes nos découvertes à propos du monde qui nous entoure !</p>
+                <button class="btn" type="button">Découvrir</button>
+            </div>
+
+            <div class="numbers">
+                <div class="items-header">
+                    <h2>Les chiffres</h2>
+                    <p class="text">Nous nous efforçons à a archiver toutes nos trouvailles pour vous les partager autant que possible !</p>
+                </div>
+
+
+                <div class="section-item">
+
+                    <div class="items">
+                        <div class="item-logo">
+                            <i class="fas fa-solid fa-globe"></i>
+                        </div>
+
+                        <div class="item-content">
+                            <h3>Nombre d'êtres vivants recensés</h3>
+                            <p class="persons">82</p>
+                        </div>
+                    </div>
+
+                    <div class="items">
+                        <div class="item-logo">
+                            <i class="fas fa-solid fa-globe"></i>
+                        </div>
+
+                        <div class="item-content">
+                            <h3>Nombre d'êtres vivants recensés</h3>
+                            <p class="vehicles">82</p>
+                        </div>
+                    </div>
+
+                    <div class="items">
+                        <div class="item-logo">
+                            <i class="fas fa-solid fa-globe"></i>
+                        </div>
+
+                        <div class="item-content">
+                            <h3>Nombre d'êtres vivants recensés</h3>
+                            <p class="planets">82</p>
+                        </div>
+                    </div>
+
+                    <div class="items">
+                        <div class="item-logo">
+                            <i class="fas fa-solid fa-globe"></i>
+                        </div>
+
+                        <div class="item-content">
+                            <h3>Nombre d'êtres vivants recensés</h3>
+                            <p>82</p>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="section-items-button">
+                    <button class="btn" type="button">Participer à la prochaine mission</button>
+                </div>
+
+            </div>
+        </div>
+    </main>
+
+    <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/3de56f6143.js" crossorigin="anonymous"></script>
 </body>
 </html>
