--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                         <div class="item-content">
                             <h3>Nombre d'êtres vivants recensés</h3>
-                            <p class="persons">82</p>
+                            <p class="persons"></p>
                         </div>
                     </div>
 
@@ -79,7 +79,7 @@
 
                         <div class="item-content">
                             <h3>Nombre d'êtres vivants recensés</h3>
-                            <p class="vehicles">82</p>
+                            <p class="vehicles"></p>
                         </div>
                     </div>
 
@@ -90,7 +90,7 @@
 
                         <div class="item-content">
                             <h3>Nombre d'êtres vivants recensés</h3>
-                            <p class="planets">82</p>
+                            <p class="planets"></p>
                         </div>
                     </div>
 
@@ -101,7 +101,7 @@
 
                         <div class="item-content">
                             <h3>Nombre d'êtres vivants recensés</h3>
-                            <p>82</p>
+                            <p>10 Juin 2021</p>
                         </div>
                     </div>
 
