--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
             <nav>
                 <ul class="aside-list">
                     <li class="aside-item">
-                        <i class="fas fa-solid fa-globe"></i>
-                        <a href="#">Planètes</a>
+                        <a href="planets.html">
+                            <i class="fas fa-solid fa-globe"></i>
+                            Planètes
+                        </a>
                     </li>
                     <li class="aside-item">
-                        <i class="fas fa-solid fa-rocket"></i>
-                        <a href="#">Véhicules</a>
+
+                        <a href="#"><i class="fas fa-solid fa-rocket"></i>Véhicules</a>
                     </li>
                     <li class="aside-item">
-                        <i class="fa fa-brands fa-reddit-alien"></i>
-                        <a href="#">Personnes</a>
+
+                        <a href="#"><i class="fa fa-brands fa-reddit-alien"></i>Personnes</a>
                     </li>
                 </ul>
             </nav>
@@ -63,7 +65,7 @@
 
                     <div class="items">
                         <div class="item-logo">
-                            <i class="fas fa-solid fa-globe"></i>
+                            <i class="fa fa-solid fa-user"></i>
                         </div>
 
                         <div class="item-content">
@@ -74,7 +76,7 @@
 
                     <div class="items">
                         <div class="item-logo">
-                            <i class="fas fa-solid fa-globe"></i>
+                            <i class="fa fa-solid fa-rocket"></i>
                         </div>
 
                         <div class="item-content">
@@ -96,7 +98,7 @@
 
                     <div class="items">
                         <div class="item-logo">
-                            <i class="fas fa-solid fa-globe"></i>
+                            <i class="fa fa-solid fa-clock"></i>
                         </div>
 
                         <div class="item-content">
