--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Intégration - AJAX</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./logotype.png" alt="logo">
+            <img src="assets/logotype.png" alt="logo">
         </div>
 
         <nav>
@@ -118,7 +118,7 @@
         </div>
     </main>
 
-    <script src="./script.js"></script>
+    <script src="script/script.js"></script>
     <script src="https://kit.fontawesome.com/3de56f6143.js" crossorigin="anonymous"></script>
 </body>
 </html>
