--- a/planets.html
+++ b/planets.html
@@ -72,9 +72,15 @@
                     </tbody>
                 </table>
 
+                <div class="countPlanets">
+                    <p class="count"></p>
+                </div>
             </div>
+
             <div class="display-planets">
-                <p>Selectionner le contenu à afficher !</p>
+                <p class="toggle">Selectionner le contenu à afficher !</p>
+
+
             </div>
 
         </div>
