facto code + affichage detailplanet

--- a/planets.html
+++ b/planets.html
@@ -84,8 +84,8 @@
 <!--                <p class="toggle">Selectionner le contenu à afficher !</p>-->
                 <div class="detailsPlanet">
                     <div class="detailsPlanet_header">
-                        <h2 class="name">Nom de la planéte</h2>
-                        <p class="population"></p>
+                        <h2 class="name"></h2>
+                        <p class="population">Population : </p>
                     </div>
 
                     <div class="detailsPlanet_content">
