ajout d'un loader sur le tableau

--- a/planets.html
+++ b/planets.html
@@ -61,7 +61,12 @@
                     <i class="fas fa-solid fa-globe"></i>
                 </div>
 
-                <div class="tablePlanet">
+                <div class="tablePlanet ">
+
+                    <div id="loader">
+                        <div class="spinner"></div>
+                    </div>
+
                     <table>
                         <thead>
                         <tr>
@@ -81,7 +86,7 @@
             </div>
 
             <div class="display-planets">
-<!--                <p class="toggle">Selectionner le contenu à afficher !</p>-->
+                <p class="toggle">Selectionner le contenu à afficher !</p>
                 <div class="detailsPlanet">
                     <div class="detailsPlanet_header">
                         <h2 class="name"></h2>
